--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,8 +16,8 @@
         <img src="./images/catalog_logo.png" alt="Restaurant Catalog Logo" />
         <h1>Jelajah Rasa</h1>
       </div>
-      <button class="drawer-button" aria-label="Menu">☰</button>
-      <nav>
+      <button class="drawer-button" id="hamburgerButton" aria-label="Menu">☰</button>
+      <nav id="navigationDrawer">
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="#">Favorite</a></li>
