membuat URL Router

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,8 +19,8 @@
       <button class="drawer-button" id="hamburgerButton" aria-label="Menu">☰</button>
       <nav id="navigationDrawer">
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="#">Favorite</a></li>
+          <li><a href="#/home">Home</a></li>
+          <li><a href="#/favorite">Favorite</a></li>
           <li>
             <a
               target="blank"
@@ -40,7 +40,7 @@
       />
     </div>
 
-    <main id="main-content" tabindex="0"></main>
+    <main id="mainContent" tabindex="0"></main>
 
     <footer>
       <div class="footer-content">
