--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -408,3 +408,110 @@ nav {
 img {
   max-width: 100%;
 }
+
+/* style tambahan untuk halaman detail */
+
+.restaurant-detail{
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+  color: var(--p-color);
+}
+
+.restaurant-detail__image{
+  border-radius: 10px;
+  border: 5px solid var(--resto-h2-color);
+  width: 100%;
+}
+
+.restaurant-detail h2{
+  color: var(--resto-h2-color);
+}
+
+.restaurant-detail h3{
+  color: var(--resto-h5-color);
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+
+.restaurant-detail__address{
+  margin-top: 15px;
+}
+
+.restaurant-detail__description{
+  margin-top: 15px;
+  text-align: justify;
+}
+
+.restaurant-detail ul{
+  list-style-type: square;
+  margin-left: 20px;
+  text-indent: 20px;
+}
+
+.restaurant-detail li{
+  margin-top: 5px;
+}
+
+.restaurant-detail__menu{
+  background-color: var(--resto-bg-color);
+  flex: 1;
+  margin-top: 15px;
+  border: 2px dotted var(--resto-h2-color);
+  padding: 25px;
+  border-radius: 10px;
+}
+
+.restaurant-detail__menu{
+  display: flex;
+  flex-wrap: wrap ;
+  /* flex-direction: column; */
+  justify-content: space-between;
+}
+
+.restaurant-detail__food-menu{
+  display: flex;
+  flex-direction: column;
+}
+
+.favorite-button{
+  margin-top: 20px;
+  padding: 13px;
+  background-color: var(--resto-h2-color);
+  border-radius: 10px;
+}
+
+@media screen and (max-width: 768px){
+  .restaurant-detail-image {
+    width: 100%;
+  }
+  .restaurant-detail__menu{
+    flex: 1 1 calc(45% - 20px);
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+}
+
+@media screen and (min-width: 850px) {
+  .restaurant-detail h3{
+    text-align: left;
+  }
+  .restaurant-detail__menu{
+    flex: 1 1 calc(45% - 20px);
+    padding-left: 150px;
+    padding-right: 150px;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .restaurant-detail h3{
+    text-align: left;
+  }
+  .restaurant-detail__menu{
+    flex: 1 1 calc(45% - 20px);
+    padding-left: 350px;
+    padding-right: 350px;
+  }
+  
+}
