--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jelajah Rasa</title>
     <link rel="stylesheet" href="./styles/main.css" />
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Lilita+One&family=Protest+Riot&display=swap" rel="stylesheet">
   <body>
     <a href="#main-content" class="skip-to-content" id="skip-to-content-link"
       >Skip to Content</a
