--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jelajah Rasa</title>
+    <link rel="manifest" href="./app.webmanifest">
     <link rel="shortcut icon" href="./images/catalog_logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
