--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#DB0000"/>
     <title>Jelajah Rasa</title>
     <link rel="manifest" href="./app.webmanifest">
     <link rel="shortcut icon" href="./images/catalog_logo.png" type="image/x-icon">
