--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Lilita+One&family=Protest+Riot&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
   <body>
     <a href="#main-content" class="skip-to-content" id="skip-to-content-link"
       >Skip to Content</a
