styling untuk tombol like

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -366,6 +366,30 @@ footer {
   color: #333;
 }
 
+/* styling untuk tombol like */
+.restaurant .restaurant-detail__menu h4 {
+  margin: 8px 0;
+}
+ 
+.like {
+  width: 55px;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #db0000;
+  
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+  border-radius: 50%;
+  border: 0;
+  
+  font-size: 18px;
+  color: white;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 768px) {
   .footer-content {
     flex-direction: column;
