--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -563,3 +563,56 @@ img {
     padding-right: 300px;
   }
 }
+
+/* Style untuk form review */
+.review-form {
+  margin-top: 20px;
+  background-color: var(--resto-bg-color);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.review-form h2 {
+  margin-bottom: 15px;
+  color: var(--resto-h2-color);
+}
+
+.review-form .form-group {
+  margin-bottom: 15px;
+}
+
+.review-form label {
+  display: block;
+  margin-bottom: 5px;
+  color: var(--p-color);
+}
+
+.review-form input[type="text"],
+.review-form select,
+.review-form textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.review-form textarea {
+  height: 100px;
+}
+
+.review-form button[type="submit"] {
+  padding: 10px 20px;
+  background-color: var(--header-bg);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.review-form button[type="submit"]:hover {
+  background-color: #ff6347;
+}
