--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -475,12 +475,13 @@ img {
 
 .restaurant-detail h2{
   color: var(--resto-h2-color);
+  margin-bottom: 10px;
 }
 
 .restaurant-detail h3{
   color: var(--resto-h5-color);
   text-align: center;
-  margin-top: 10px;
+  margin-top: 35px;
   margin-bottom: 15px;
 }
 
@@ -500,7 +501,19 @@ img {
 }
 
 .restaurant-detail li{
-  margin-top: 5px;
+  margin-top: 15px;
+}
+
+.restaurant-detail__review-list{
+  height: 212px;
+  border-top: 4px solid var(--resto-h2-color);
+  border-bottom: 4px solid var(--resto-h2-color);
+  overflow-y: scroll;
+  background-color: var(--resto-bg-color);
+}
+
+.restaurant-detail__review-list li{
+  border-bottom:  1px dotted var(--resto-h5-bg);
 }
 
 .restaurant-detail__menu{
@@ -532,7 +545,7 @@ img {
 @media screen and (max-width: 450px){
   .restaurant-detail__menu{
     flex: 1 1 calc(95% - 20px);
-    padding-top: 15px;
+    padding-top: 0px;
     padding-bottom: 15px;
     padding-left: 10px;
     padding-right: 10px;
