--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,7 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Lilita+One&family=Protest+Riot&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
 
-    <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      crossorigin="anonymous"
+    />
   <body>
     <a href="#main-content" class="skip-to-content" id="skip-to-content-link"
       >Skip to Content</a
