perbaikan style aman

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -220,7 +220,7 @@ hr {
   transform: var(--resto-scale);
 }
 
-.restaurant-image {
+.restaurant img{
   border-top-right-radius: 35px;
   border-bottom-left-radius: 35px;
   width: 100%;
